fixed error handling and bg

--- a/src/index.css
+++ b/src/index.css
@@ -16,13 +16,13 @@ code {
     monospace;
 }
 .BGCOLOR {
-  background-color: #002147 /*#2980b9*/
+  background-color: #f5f5f5 /*#2980b9*/
 }
 .NAVBARCOLOR {
-  background-color: #002147 /*#2980b9*/
+  background-color: #2980b9 /*#2980b9*/
 }
 .SIDEBARCOLOR {
-  background-color: #002147 /*#2980b9*/
+  background-color: #2980b9 /*#2980b9*/
 }
 .CARDHEADERCOLOR {
   background-color: #2980b9
