changed some features

--- a/src/index.css
+++ b/src/index.css
@@ -19,13 +19,13 @@ code {
   background-color: #f5f5f5 /*#2980b9*/
 }
 .NAVBARCOLOR {
-  background-color: #2980b9 /*#2980b9*/
+  background-color: #3a9ada /*#2980b9*/
 }
 .SIDEBARCOLOR {
-  background-color: #2980b9 /*#2980b9*/
+  background-color: #3a9ada /*#2980b9*/
 }
 .CARDHEADERCOLOR {
-  background-color: #2980b9
+  background-color: #3a9ada
 }
 
 
